# openddil-sensor-ingest

./: .cursorrules  .gitignore  AGENTS.md  Dockerfile  README.md  cloudevents_schema.json  config.py  config.yaml  dds_ingestor.py  dis_ingestor.py  llms.txt  pyproject.toml  redpanda-connect.yaml
.github/workflows/: docker-build.yml
dds-ingestor/: Dockerfile
fixtures/: README.md  generate_fixtures.py
