[project]
name = "openddil-sensor-ingest"
version = "0.2.0"
description = "OpenDDIL Sensor Ingestion Gateway — Binary DIS Sidecar"
requires-python = ">=3.11"
dependencies = [
    "opendis==1.0",
    "confluent-kafka>=2.0.0,<3.0.0",
    "prometheus-client>=0.20.0,<1.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "protobuf>=4.21.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
